[gd_scene load_steps=5 format=3 uid="uid://7e5katrwcpxy"]

[ext_resource type="Script" path="res://crisisPhase/characters/NPC.gd" id="1_mgugj"]
[ext_resource type="Texture2D" uid="uid://ukcbiovx5a4l" path="res://res/sprites/characters/sprite_dummy.png" id="2_3c1j3"]
[ext_resource type="Texture2D" uid="uid://f8j852tv3e22" path="res://res/gui/invisible_button.png" id="3_d42ls"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1u2dm"]
radius = 18.0

[node name="NPC" type="CharacterBody2D"]
script = ExtResource("1_mgugj")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("2_3c1j3")
offset = Vector2(0, -30)
hframes = 3

[node name="CollisionCircle" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_1u2dm")

[node name="DialogueHitbox" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -72.0
offset_right = 77.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("3_d42ls")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
position = Vector2(0, 9)
avoidance_enabled = false
radius = 32.0

[connection signal="pressed" from="DialogueHitbox" to="." method="_on_dialogue_hit_box_pressed"]
